# zonal-zero-trust-auth

./: .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  clang-tidy  first-push.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: Toolchain-A53.cmake  Toolchain-M7.cmake  zzta-config.cmake
docs/: COMPLIANCE.md  HARA_zonal_zero_trust.md  TARA.md  TEST_REPORT.md  TRACEABILITY.md  architecture.md
include/zzta/: CryptoPlatformInterface.hpp  SomeIpAdaptor.hpp  SpdmProtocolEngine.hpp  TokenLifecycleManager.hpp  ZztaVersion.hpp
sbom/: zzta-1.0.0.spdx.json
scripts/: autosar_scan.sh
src/: CryptoPlatformInterface.cpp  SomeIpAdaptor.cpp  SpdmProtocolEngine.cpp  TokenLifecycleManager.cpp
tests/: test_zzta_core.cpp
